...
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp">

        <androidx.appcompat.widget.AppCompatCheckedTextView
            android:id="@+id/textViewItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/review_item_text_bg"
            android:checked="@{isSelected}"
            android:fontFamily="@font/poppins_light"
...
            app:layout_constraintTop_toTopOf="parent"
            tools:checked="true"
            tools:text="Good Review"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageViewReview"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="7dp"
            android:visibility="@{showImage ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
